Added fixies for sign up
