# docs/swagger.json
@@ -10,6 +10,55 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/sign-up": {
+            "post": {
+                "description": "sign up with data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "sign up to the system",
+                "parameters": [
+                    {
+                        "description": "user sign up",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/contact-list_internal_domain.UserSignUp"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/contacts": {
             "get": {
                 "description": "get contacts",
@@ -29,7 +78,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/contact-list_internal_domain_contact.Contact"
+                                "$ref": "#/definitions/contact-list_internal_domain.Contact"
                             }
                         }
                     },
@@ -72,7 +121,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/contact-list_internal_domain_contact.SaveInputContact"
+                            "$ref": "#/definitions/contact-list_internal_domain.SaveInputContact"
                         }
                     }
                 ],
@@ -127,7 +176,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/contact-list_internal_domain_contact.Contact"
+                            "$ref": "#/definitions/contact-list_internal_domain.Contact"
                         }
                     },
                     "400": {
@@ -169,7 +218,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/contact-list_internal_domain_contact.SaveInputContact"
+                            "$ref": "#/definitions/contact-list_internal_domain.SaveInputContact"
                         }
                     },
                     {
@@ -184,7 +233,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/contact-list_internal_domain_contact.Contact"
+                            "$ref": "#/definitions/contact-list_internal_domain.Contact"
                         }
                     },
                     "400": {
@@ -255,7 +304,7 @@
         }
     },
     "definitions": {
-        "contact-list_internal_domain_contact.Contact": {
+        "contact-list_internal_domain.Contact": {
             "type": "object",
             "properties": {
                 "address": {
@@ -287,7 +336,7 @@
                 }
             }
         },
-        "contact-list_internal_domain_contact.SaveInputContact": {
+        "contact-list_internal_domain.SaveInputContact": {
             "type": "object",
             "required": [
                 "address",
@@ -314,6 +363,25 @@
                     "type": "string"
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "contact-list_internal_domain.UserSignUp": {
+            "type": "object",
+            "required": [
+                "email",
+                "name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
